fix mobile letter spacing

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -725,7 +725,9 @@ article#page-post h3 {
     article#page-post header h1 {
       font-size: 3.5rem;
     }
-
+    article p {
+        text-align: left;
+    }
     .special.header {
         font-size: 3rem;
         line-height: 1.4;
